yaml/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.0
        volumeMounts:
        - mountPath: /usr/share/nginx/
          name: nginx-data-storage
        - mountPath: /etc/nginx/
          name: nginx-conf-storage
      volumes:
      - name: nginx-data-storage
        persistentVolumeClaim:
          claimName: nginx-data-pvc
      - name: nginx-conf-storage
        persistentVolumeClaim:
          claimName: nginx-conf-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
